// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select[Base] should render correctly  1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about absolute 1`] = `
<div
  style="padding: 10px; height: 100px; width: 100%; overflow: hidden;"
>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 120px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              default
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px; margin-inline-start: 16px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper c-po1wm soui-select-multiple-result-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select user
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about autoAdapt 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about big data 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Tag
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about create 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c3lr859 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px; margin-inline-start: 16px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper c-po1wm soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c3lr859 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom render 1`] = `
<div
  style="display: flex; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom result 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom unmatch 1`] = `
<div>
  <div
    class="c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="cnrittp soui-select-ellipsis"
          >
            I am redddd color
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-kch51i soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px; width: 624px;"
>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c6cr2f7 soui-select-wrapper-disabled c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-rxsw49 soui-select-wrapper c6cr2f7 soui-select-wrapper-disabled c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper cbnyili soui-select-compressed-wrapper c-po1wm soui-select-multiple-result-wrapper c4mmlpy soui-select-multiple-compressed-wrapper"
        >
          <span
            style="display: inline-flex;"
          >
            <div
              class="c2jp65q soui-select-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
              style=""
            >
              <span
                class="c-eycf2v soui-tag-wrapper"
              >
                +2
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper cbnyili soui-select-compressed-wrapper c-po1wm soui-select-multiple-result-wrapper c4mmlpy soui-select-multiple-compressed-wrapper"
        >
          <span
            style="display: inline-flex;"
          >
            <div
              class="c2jp65q soui-select-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
              style=""
            >
              <span
                class="c-eycf2v soui-tag-wrapper"
              >
                +2
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-kch51i soui-select-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper c-po1wm soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c3lr859 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about format 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about group 1`] = `
<div
  class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
  data-soui-input-border="true"
  style="width: 240px;"
  tabindex="0"
>
  <div
    class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
  >
    <div
      class="clqv6ix soui-select-result"
    >
      <div
        class="c-ux7mcj soui-select-result-text-wrapper"
      >
        <span
          class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
        >
          <span>
            Select a city
          </span>
        </span>
      </div>
    </div>
    <div
      class="crh43ou soui-select-icon-wrapper"
    >
      <span
        class="c-gan7ka soui-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-x2a847 soui-select-wrapper-inner-title c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c1tywhu soui-inner-title-wrapper"
      >
        <div
          class="ccvxbif soui-inner-title-title c9br610 soui-inner-title-top"
        >
          Select Color
        </div>
        <div
          class="cctrnsm soui-inner-title-place"
        >
          <div
            class="ccvxbif soui-inner-title-title"
          >
            Select Color
          </div>
        </div>
        <div
          class="c-8tfriw soui-inner-title-content"
        >
          <div
            class="clqv6ix soui-select-result"
          >
            <div
              class="c-ux7mcj soui-select-result-text-wrapper"
            >
              <div
                class="cwst9sq soui-select-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about loading 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable cvgg3wc soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper c-po1wm soui-select-multiple-result-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about size 1`] = `
<div
  style="display: flex; gap: 24px; align-items: center;"
>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-zi0aow soui-select-wrapper-small c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper czf1vro soui-select-wrapper-large c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
    tabindex="0"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <span
            class="clkf6tj soui-select-placeholder cnrittp soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree more 1`] = `
<div>
  <div
    class="czbeyau soui-select-wrapper-empty c-rxsw49 soui-select-wrapper c-kc1u6d soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
  >
    <div
      class="c6l60zu soui-select-result-wrapper cq0d0ox soui-select-wrapper-padding-box c-7ivydw soui-select-wrapper-inner-title-top c-20z7rg soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="clqv6ix soui-select-result"
      >
        <div
          class="c-ux7mcj soui-select-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Select Color"
            style="width: 100%;"
            value=""
          />
          <span
            class="c3lr859 soui-select-input-mirror"
          />
        </div>
      </div>
      <div
        class="crh43ou soui-select-icon-wrapper"
      >
        <span
          class="c-gan7ka soui-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
